--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /nbproject/private/
 /PruebaRicardo-war/nbproject/private/
 /PruebaRicardo-ejb/nbproject/private/
+/PruebaRicardo-ejb/build/
+/PruebaRicardo-ejb/dist/
+/PruebaRicardo-war/build/
+/build/
+/PruebaRicardo-war/dist/
